public/stylesheets/ui/upload.css
#upload_dialog .custom {
  width: 500px;
}
  #upload_dialog .row {
    margin-bottom: 15px;
    position: relative;
  }
    #upload_dialog .row.last {
      margin-bottom: 0;
    }
  #upload_dialog label {
    display: block;
    line-height: 27px;
    font-size: 12px;
    color: #ccc;
    text-align: left;
  }
  #upload_dialog .text_input {
    float: right;
    width: 375px;
  }
  #upload_dialog textarea {
    float: right;
    width: 375px; height: 78px;
    margin-bottom: 10px;
  }
  #document_upload_file, #document_upload_access, #document_project_title {
    position: absolute;
    left: 108px; top: 3px;
  }
    #document_upload_file {
      color: #ccc;
    }
    #document_project_title {
      line-height: 21px;
      font-size: 14px;
      color: #999;
    }
  #upload_dialog .controls {
    position: absolute;
    margin: 0;
    right: 30px; bottom: 30px;
    left: auto;
  }
    #upload_dialog .controls_inner {
      left: auto;
    }

#no_uploads .icon {
  float: left;
  margin-right: 10px;
  opacity: 0.75; filter: alpha(opacity=75);
}

#upload_info.row {
  font-size: 10px;
  line-height: 25px;
  color: #ccc;
  text-align: left;
  margin: 15px 0 0 0;
}
  #upload_info .spinner_dark {
    position: absolute;
    margin-top: 4px;
    left: 280px;
  }

